--- a/src/main/java/com/rkade/MainForm.form
+++ b/src/main/java/com/rkade/MainForm.form
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.rkade.MainForm">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridBagLayout">
+  <grid id="27dc6" binding="mainPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="1120" height="962"/>
+      <xy x="20" y="20" width="778" height="826"/>
     </constraints>
     <properties>
       <minimumSize width="700" height="400"/>
@@ -10,68 +10,8 @@
     </properties>
     <border type="none"/>
     <children>
-      <tabbedpane id="c441e" binding="mainTab">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="2" use-parent-layout="false">
-            <preferred-size width="1024" height="768"/>
-          </grid>
-          <gridbag weightx="1.0" weighty="1.0"/>
-        </constraints>
-        <properties>
-          <minimumSize width="500" height="400"/>
-          <name value="Inputs"/>
-          <preferredSize width="500" height="500"/>
-          <tabLayoutPolicy value="0"/>
-        </properties>
-        <border type="none"/>
-        <children>
-          <grid id="b8e5d" binding="axesTab" layout-manager="BorderLayout" hgap="0" vgap="0">
-            <constraints>
-              <tabbedpane title="Axes"/>
-            </constraints>
-            <properties>
-              <minimumSize width="500" height="60"/>
-              <preferredSize width="500" height="750"/>
-            </properties>
-            <border type="none"/>
-            <children>
-              <grid id="2743d" binding="topPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
-                <constraints border-constraint="Center"/>
-                <properties>
-                  <autoscrolls value="true"/>
-                  <maximumSize width="104" height="80"/>
-                  <minimumSize width="104" height="60"/>
-                  <preferredSize width="104" height="80"/>
-                </properties>
-                <border type="bevel-lowered"/>
-                <children>
-                  <grid id="39b3d" layout-manager="BorderLayout" hgap="0" vgap="0">
-                    <constraints border-constraint="Center"/>
-                    <properties/>
-                    <border type="none"/>
-                    <children>
-                      <grid id="c158b" binding="axisPanelParent" layout-manager="BorderLayout" hgap="0" vgap="0">
-                        <constraints border-constraint="Center"/>
-                        <properties/>
-                        <border type="none"/>
-                        <children/>
-                      </grid>
-                      <nested-form id="63a6a" form-file="com/rkade/ButtonsPanel.form" binding="buttonsPanel">
-                        <constraints border-constraint="South"/>
-                      </nested-form>
-                    </children>
-                  </grid>
-                </children>
-              </grid>
-            </children>
-          </grid>
-        </children>
-      </tabbedpane>
       <grid id="f3ed9" binding="bottomPanel" layout-manager="FlowLayout" hgap="4" vgap="4" flow-align="1">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-          <gridbag weightx="0.0" weighty="0.0"/>
-        </constraints>
+        <constraints border-constraint="South"/>
         <properties>
           <autoscrolls value="false"/>
           <maximumSize width="1000" height="75"/>
@@ -156,6 +96,71 @@
               <text value="Save Settings to EEPROM"/>
             </properties>
           </component>
+        </children>
+      </grid>
+      <grid id="d7650" layout-manager="BorderLayout" hgap="0" vgap="0">
+        <constraints border-constraint="North"/>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <grid id="b8e5d" binding="axesTab" layout-manager="BorderLayout" hgap="0" vgap="0">
+            <constraints border-constraint="Center"/>
+            <properties>
+              <minimumSize width="500" height="60"/>
+              <preferredSize width="500" height="750"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <grid id="2743d" binding="topPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
+                <constraints border-constraint="Center"/>
+                <properties>
+                  <autoscrolls value="true"/>
+                  <maximumSize width="104" height="80"/>
+                  <minimumSize width="104" height="60"/>
+                  <preferredSize width="104" height="80"/>
+                </properties>
+                <border type="bevel-lowered"/>
+                <children>
+                  <grid id="39b3d" layout-manager="BorderLayout" hgap="0" vgap="0">
+                    <constraints border-constraint="Center"/>
+                    <properties/>
+                    <border type="none"/>
+                    <children>
+                      <grid id="c158b" binding="axisPanelParent" layout-manager="BorderLayout" hgap="0" vgap="0">
+                        <constraints border-constraint="Center"/>
+                        <properties/>
+                        <border type="none"/>
+                        <children>
+                          <grid id="a1a7d" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+                            <constraints border-constraint="South"/>
+                            <properties/>
+                            <border type="none"/>
+                            <children>
+                              <component id="949e6" class="javax.swing.JButton" binding="btnCalibrate">
+                                <constraints/>
+                                <properties>
+                                  <text value="Calibrate"/>
+                                </properties>
+                              </component>
+                              <component id="4eff0" class="javax.swing.JButton" binding="button2" default-binding="true">
+                                <constraints/>
+                                <properties>
+                                  <text value="Button"/>
+                                </properties>
+                              </component>
+                            </children>
+                          </grid>
+                        </children>
+                      </grid>
+                      <nested-form id="63a6a" form-file="com/rkade/ButtonsPanel.form" binding="buttonsPanel">
+                        <constraints border-constraint="South"/>
+                      </nested-form>
+                    </children>
+                  </grid>
+                </children>
+              </grid>
+            </children>
+          </grid>
         </children>
       </grid>
     </children>
