--- a/src/main/java/com/rkade/ButtonsPanel.form
+++ b/src/main/java/com/rkade/ButtonsPanel.form
@@ -2,33 +2,36 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.rkade.ButtonsPanel">
   <grid id="27dc6" binding="mainButtonPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="726" height="120"/>
+      <xy x="20" y="20" width="726" height="60"/>
     </constraints>
     <properties>
       <autoscrolls value="false"/>
-      <maximumSize width="400" height="120"/>
-      <minimumSize width="400" height="120"/>
+      <maximumSize width="400" height="60"/>
+      <minimumSize width="400" height="60"/>
       <name value="mainButtonPanel"/>
-      <preferredSize width="400" height="120"/>
+      <preferredSize width="400" height="60"/>
       <requestFocusEnabled value="false"/>
     </properties>
     <border type="none"/>
     <children>
-      <grid id="5f99" binding="topPanel" layout-manager="GridBagLayout">
+      <grid id="5f99" binding="topPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
         <constraints border-constraint="North"/>
         <properties>
           <autoscrolls value="false"/>
-          <maximumSize width="200" height="120"/>
-          <minimumSize width="200" height="120"/>
-          <preferredSize width="200" height="120"/>
+          <maximumSize width="200" height="60"/>
+          <minimumSize width="200" height="60"/>
+          <preferredSize width="200" height="60"/>
         </properties>
         <border type="none"/>
         <children>
+          <component id="1494e" class="javax.swing.JLabel">
+            <constraints/>
+            <properties>
+              <text value="Buttons: "/>
+            </properties>
+          </component>
           <component id="6b4a0" class="javax.swing.JButton" binding="button1">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-              <gridbag weightx="0.0" weighty="0.0"/>
-            </constraints>
+            <constraints/>
             <properties>
               <autoscrolls value="false"/>
               <enabled value="false"/>
@@ -41,10 +44,7 @@
             </properties>
           </component>
           <component id="e6cb3" class="javax.swing.JButton" binding="button2">
-            <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-              <gridbag weightx="0.0" weighty="0.0"/>
-            </constraints>
+            <constraints/>
             <properties>
               <autoscrolls value="false"/>
               <enabled value="false"/>
@@ -55,10 +55,7 @@
             </properties>
           </component>
           <component id="891bb" class="javax.swing.JButton" binding="button3">
-            <constraints>
-              <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-              <gridbag weightx="0.0" weighty="0.0"/>
-            </constraints>
+            <constraints/>
             <properties>
               <autoscrolls value="false"/>
               <enabled value="false"/>
@@ -70,10 +67,7 @@
             </properties>
           </component>
           <component id="f66a3" class="javax.swing.JButton" binding="button4">
-            <constraints>
-              <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-              <gridbag weightx="0.0" weighty="0.0"/>
-            </constraints>
+            <constraints/>
             <properties>
               <autoscrolls value="false"/>
               <enabled value="false"/>
@@ -85,10 +79,7 @@
             </properties>
           </component>
           <component id="f48d9" class="javax.swing.JButton" binding="button5">
-            <constraints>
-              <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-              <gridbag weightx="0.0" weighty="0.0"/>
-            </constraints>
+            <constraints/>
             <properties>
               <autoscrolls value="false"/>
               <enabled value="false"/>
@@ -100,10 +91,7 @@
             </properties>
           </component>
           <component id="f92c8" class="javax.swing.JButton" binding="button6">
-            <constraints>
-              <grid row="1" column="5" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-              <gridbag weightx="0.0" weighty="0.0"/>
-            </constraints>
+            <constraints/>
             <properties>
               <autoscrolls value="false"/>
               <enabled value="false"/>
@@ -115,10 +103,7 @@
             </properties>
           </component>
           <component id="ea70a" class="javax.swing.JButton" binding="button7">
-            <constraints>
-              <grid row="1" column="6" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-              <gridbag weightx="0.0" weighty="0.0"/>
-            </constraints>
+            <constraints/>
             <properties>
               <autoscrolls value="false"/>
               <enabled value="false"/>
@@ -130,10 +115,7 @@
             </properties>
           </component>
           <component id="4a55b" class="javax.swing.JButton" binding="button8">
-            <constraints>
-              <grid row="1" column="7" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-              <gridbag weightx="0.0" weighty="0.0"/>
-            </constraints>
+            <constraints/>
             <properties>
               <autoscrolls value="false"/>
               <enabled value="false"/>
@@ -142,15 +124,6 @@
               <rolloverEnabled value="false"/>
               <selected value="false"/>
               <text value="8"/>
-            </properties>
-          </component>
-          <component id="1494e" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-              <gridbag weightx="0.0" weighty="0.0"/>
-            </constraints>
-            <properties>
-              <text value="Buttons"/>
             </properties>
           </component>
         </children>
